@@ -38,7 +38,6 @@ import java.util.Set;
 
 import org.junit.jupiter.api.Test;
 
-import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Sets;
 
@@ -47,7 +46,6 @@ import com.google.common.collect.Sets;
  */
 class SqlViewTest
 {
-
     @Test
     void testIsValidQueryValue()
     {
@@ -64,7 +62,7 @@ class SqlViewTest
     void testGetCriteria()
     {
         Set<String> params = Sets.newHashSet( "type:NUMBER", "aggregationType:AVERAGE" );
-        Map<String, String> expected = ImmutableMap.of( "type", "NUMBER", "aggregationType", "AVERAGE" );
+        Map<String, String> expected = Map.of( "type", "NUMBER", "aggregationType", "AVERAGE" );
         assertEquals( expected, SqlView.getCriteria( params ) );
     }
 
