@@ -35,6 +35,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.util.Collections;
 import java.util.HashSet;
+import java.util.List;
 
 import org.hisp.dhis.dxf2.common.ImportOptions;
 import org.hisp.dhis.dxf2.events.event.DataValue;
@@ -47,7 +48,6 @@ import org.hisp.dhis.dxf2.importsummary.ImportSummary;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Sets;
 
 /**
@@ -74,7 +74,7 @@ class FilteredDataValueCheckTest
         event.setDataValues( dataValues );
         WorkContext ctx = WorkContext.builder().importOptions( ImportOptions.getDefaultImportOptions() )
             .programsMap( getProgramMap() )
-            .eventDataValueMap( new EventDataValueAggregator().aggregateDataValues( ImmutableList.of( event ),
+            .eventDataValueMap( new EventDataValueAggregator().aggregateDataValues( List.of( event ),
                 Collections.emptyMap(), ImportOptions.getDefaultImportOptions() ) )
             .build();
         ImportSummary importSummary = dataValueCheck.check( new ImmutableEvent( event ), ctx );
